# yara

./: BUILD.bazel  CMakeLists.txt
bazel/: yara.bzl
libyara/include/: yara.h
libyara/include/yara/: modules.h
libyara/modules/: module_list
libyara/modules/dex/: dex.c
libyara/modules/macho/: macho.c
libyara/modules/ole/: ole.cpp
libyara/modules/pe/: pe.c
